# git-conflict-manager

./: Cargo.toml  LICENSE  Makefile  README.md  crates.js  help.html  settings.html  src-files.js
.github/workflows/: automate_build.yml  docs.yml  test.yml
crates/git-conflict/: Cargo.toml  README.md
crates/git-conflict-cli/: Cargo.toml  README.md
crates/git-conflict-cli/src/: desc.rs  main.rs  tui.rs
gcm/git-conflict/: Cargo.toml  README.md
gcm/git-conflict-cli/: Cargo.toml  README.md
gcm/git-conflict-cli/src/: main.rs
git-conflict/: 2  Cargo.toml
git-conflict/src/: main.rs
git_conflict/: all.html  index.html  sidebar-items.js  trait.Actions.html  trait.GitOps.html  trait.Initialize.html  trait.ManualControl.html  trait.Utils.html
git_conflict/combine/: index.html  sidebar-items.js  struct.CmVersion.html
git_conflict/discarding/: index.html  sidebar-items.js  struct.DsVersion.html
git_conflict/git_src/: index.html  sidebar-items.js  struct.Branches.html  struct.Repo.html
git_conflict/merge_trees/: index.html  sidebar-items.js  struct.TreeVersion.html
git_conflict/utils/: index.html  sidebar-items.js  struct.NucCheckoutBuilder.html  struct.NucIndex.html  struct.NucRepository.html
git_conflict_cli/: all.html  fn.main.html  index.html  sidebar-items.js
lib/: Cargo.toml
lib/src/: lib.rs
search.index/: 05911825d2.js  1a712dce43.js  1f1f0c8554.js  1f45dbb455.js  243d23733c.js  2a32b0e1de.js  428df4aa6f.js  430796a4d5.js  4393a44368.js  44de80383f.js  458a0aba7a.js  5d59dbd373.js  6754b96b0f.js  7b92c04793.js  7d19c0bb25.js  root.js
(+49 files in other folders)
