[package]
name = "git-conflict-cli"
version = "1.0.2"
edition = "2024"
description= "A git conflict manager library"
license="MIT"

[dependencies]
colored = "3.1.1"
env_logger = "0.11.9"
git2 = "0.20.4"
git_conflict={path="../git-conflict", version="1.0.2"}
log = "0.4.29"
ratatui = "0.30.2"
tui-big-text = "0.8.8"
